--- a/style.css
+++ b/style.css
@@ -8,6 +8,7 @@ body {
   background: #f0f0f0;
   background-image: url(./bg.webp);
   background-size: cover;
+  padding: 25px;
 }
 .box {
   position: relative;
