--- a/style.css
+++ b/style.css
@@ -4,7 +4,7 @@ body {
   display: flex;
   justify-content: center;
   align-items: center;
-  min-height: 100vh;
+  height: 100vh;
   background: #f0f0f0;
   background-image: url(./bg.webp);
   background-size: cover;
