--- a/style.css
+++ b/style.css
@@ -1,5 +1,8 @@
 @import url('https://fonts.googleapis.com/css?family=Lato:700');
 @import url('https://fonts.googleapis.com/css2?family=Dancing+Script:wght@700&display=swap');
+* {
+  box-sizing: border-box;
+}
 body {
   display: flex;
   justify-content: center;
@@ -9,6 +12,7 @@ body {
   background-image: url(./bg.webp);
   background-size: cover;
   padding: 25px;
+  margin: 0;
 }
 .box {
   position: relative;
