--- a/style.css
+++ b/style.css
@@ -28,10 +28,16 @@ body {
   display: flex;
   justify-content: center;
   align-items: center;
+  flex-wrap: wrap;
 }
 .text-box {
-  font-size: 40px;
+  font-size: 45px;
   text-align: center;
+  margin: 0;
+}
+.smile {
+  font-size: 45px;
+  margin: 0;
 }
 
 /* common */
